--- a/html/result.html
+++ b/html/result.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/style.css">
     <script src="../script/result.js"></script>
     
-    <title>Result</title>
+    <title>Result page</title>
 </head>
 <body>
     
